# flightmare

./: .clang-format  .gitignore  Dockerfile  LICENSE  README.md  _config.yml  about.md  check_gpu_usage.py  environment.yml  index.html  posts.md  requirements.txt  typography.md
.github/workflows/: clang_format.yaml  clang_format.yml  cpp_unittests.yaml  cpp_unittests.yml
_includes/: footer.html  head.html  header.html
_layouts/: default.html
_sass/: _layout.scss
_site/: Gemfile  README.md  feed.xml  index.html
_site/about/: index.html
_site/css/: main.css
css/: main.scss
docs/source/: conf.py  documentation.rst  index.rst
flightagi/: CMakeLists.txt  package.xml
flightagi/launch/camera/: camera.launch
flightagi/params/: default.yaml
flightagi/src/camera/: camera.cpp
flightlib/: CMakeCache.txt  CMakeLists.txt  package.xml  setup.py  test.py
flightlib/cmake/: agilib.cmake  agilib_download.cmake  catkin.cmake  eigen.cmake  eigen_download.cmake  gtest.cmake  gtest_download.cmake  pybind11.cmake  pybind11_download.cmake  yaml.cmake  yaml_download.cmake
flightlib/configs/: quadrotor_env.yaml  vec_env.yaml
flightlib/include/flightlib/bridges/: unity_bridge.hpp  unity_message_types.hpp
flightlib/include/flightlib/common/: command.hpp  csv_reader.hpp  integrator_base.hpp  integrator_euler.hpp  integrator_rk4.hpp  logger.hpp  math.hpp  parameter_base.hpp  pend_state.hpp  quad_state.hpp  rigid_state.hpp  timer.hpp  types.hpp  utils.hpp
flightlib/include/flightlib/controller/: filter.hpp  lowlevel_controller_base.hpp  lowlevel_controller_betaflight.hpp  lowlevel_controller_simple.hpp  pid_parts.hpp
flightlib/include/flightlib/dynamics/: dynamics_base.hpp  pendulum_dynamics.hpp  quadrotor_dynamics.hpp
flightlib/include/flightlib/envs/: env_base.hpp  test_env.hpp  vec_env.hpp  vec_env_base.hpp
flightlib/include/flightlib/envs/quadrotor_env/: quadrotor_env.hpp  quadrotor_env_param.hpp  quadrotor_vec_env.hpp
flightlib/include/flightlib/envs/vision_env/: vision_env.hpp  vision_vec_env.hpp
flightlib/include/flightlib/json/: json.hpp
flightlib/include/flightlib/objects/: object_base.hpp  quadrotor.hpp  static_gate.hpp  static_object.hpp  unity_camera.hpp  unity_object.hpp
flightlib/include/flightlib/sensors/: event_camera.hpp  imu.hpp  rgb_camera.hpp  sensor_base.hpp
flightlib/src/bridges/: unity_bridge.cpp
flightlib/src/common/: command.cpp  integrator_base.cpp  integrator_euler.cpp  integrator_rk4.cpp  logger.cpp  math.cpp  parameter_base.cpp  pend_state.cpp  quad_state.cpp  rigid_state.cpp  timer.cpp  utils.cpp
flightlib/src/controller/: filter.cpp  lowlevel_controller_base.cpp  lowlevel_controller_betaflight.cpp  lowlevel_controller_simple.cpp  pid_parts.cpp
flightlib/src/dynamics/: dynamics_base.cpp  quadrotor_dynamics.cpp
flightlib/src/envs/: env_base.cpp  test_env.cpp  vec_env.cpp  vec_env_base.cpp
flightlib/src/envs/quadrotor_env/: quadrotor_env.cpp  quadrotor_env_original.cpp  quadrotor_env_param.cpp  quadrotor_vec_env.cpp
flightlib/src/envs/vision_env/: vision_env.cpp  vision_vec_env.cpp
flightlib/src/objects/: object_base.cpp  quadrotor.cpp  static_gate.cpp  static_object.cpp  unity_camera.cpp  unity_object.cpp
flightlib/src/sensors/: event_camera.cpp  imu.cpp  rgb_camera.cpp  sensor_base.cpp
flightlib/src/wrapper/: pybind_wrapper.cpp
flightlib/tests/bridges/: unity_bridge.cpp
flightlib/tests/common/: eigen.cpp  integrators.cpp  logger.cpp  quad_state.cpp
flightlib/tests/dynamics/: quadrotor_dynamics.cpp
flightlib/tests/envs/: quadrotor_env.cpp  vec_env.cpp
flightlib/tests/envs/quadrotor_env/: quadrotor_env.cpp  quadrotor_vec_env.cpp
flightlib/tests/envs/vision_env/: vision_env.cpp
flightlib/tests/flightgym/: interface.py
flightlib/tests/objects/: quadrotor.cpp
flightlib/tests/sensors/: rgb_camera.cpp
flightpy/: requirements.txt  setup.py
flightpy/configs/: scene.yaml
flightpy/flightrl/: data_generation.py  evaluate_control_demo.py  poisson_distribution.py  ppo_test.py  run_control_demo.py  run_demo_train_policy.py  setup.py  train_control_demo.py  trajectory_generator.py
flightpy/scripts/: lint.sh
flightrender/: .gitignore  CMakeLists.txt  package.xml
flightrl/: run_drone_control.py  setup.py
flightrl/algos/: ActorCritic.py  env.py  main.py
flightrl/examples/: run_drone_control.py  (+2 more)
flightros/: CMakeLists.txt  dependencies.yaml  package.xml
flightros/include/flightros/: flight_pilot.hpp  record.hpp  ros_utils.hpp  rosbag_writer.hpp  testing.hpp
flightros/include/flightros/camera/: camera.hpp
flightros/include/flightros/event_camera/: record.hpp  ros_utils.hpp  rosbag_writer.hpp  testing.hpp
flightros/include/flightros/motion_planning/: motion_planning.hpp  tinyply.h
flightros/include/flightros/pilot/: flight_pilot.hpp
flightros/include/flightros/racing/: racing.hpp
flightros/launch/: flight_pilot.launch  record.launch  rotors_gazebo.launch  rotors_gazebo_test.launch  testing.launch
flightros/launch/camera/: camera.launch  camera.rviz
flightros/launch/motion_planning/: motion_planning.launch
flightros/launch/objects/: objects.launch
flightros/launch/pilot/: rotors_gazebo.launch  rotors_gazebo_test.launch
flightros/launch/racing/: racing.launch
flightros/params/: default.yaml  local.yaml  snaga.yaml
flightros/src/: flight_pilot.cpp  flight_pilot_node.cpp  ros_utils.cpp  rosbag_writer.cpp
flightros/src/camera/: camera.cpp
flightros/src/event_camera/: record.cpp  ros_utils.cpp  rosbag_writer.cpp  testing.cpp
flightros/src/motion_planning/: motion_planning.cpp  tinyply.cpp
flightros/src/motion_planning/data/: edges.txt  solution_path.txt  vertices.txt
flightros/src/motion_planning/visualization/: trajectory_visualization.py
flightros/src/objects/: objects.cpp
flightros/src/pilot/: flight_pilot.cpp  flight_pilot_node.cpp
flightros/src/racing/: racing.cpp
flightros/src/test/: testing.cpp
flightros/src/utils/: ros_utils.cpp  rosbag_writer.cpp
md5sum/: .differentfiles_hpp.txt.swp  differentfiles_cpp.txt  differentfiles_hpp.txt  md5sum2.txt
(+427 files in other folders)
