<?xml version="1.0"?>
<package format="2">
  <name>flightlib</name>
  <version>0.0.1</version>
  <description>Flightmare: An Open Flexible Quadrotor</description>

  <maintainer email="song@ifi.uzh.ch">Yunlong Song</maintainer>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>gtest</depend>

</package>