<?xml version="1.0"?>
<package format="2">
  <name>flightros</name>
  <version>0.0.1</version>
  <description>ROS-Wrapper for flightlib</description>

  <maintainer email="song@ifi.uzh.ch">Yunlong Song</maintainer>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>flightlib</depend>

</package>